[package]
name = "blockly-procon-client"
version = "0.1.0"
edition = "2024"

[dependencies.winit]
default-features = false
features = ["wayland"]
version = "0.30.12"

[dependencies.eframe]
default-features = false
features = ["default_fonts", "glow", "wayland"]
version = "0.33.0"

[dependencies]
egui = "0.33.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
